@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1419: Random decision forest is excessively slow on numeric features (srowen)
+
   MAHOUT-1329: Mahout for hadoop 2  (gcapan, Sergey Svinarchuk)
 
   MAHOUT-1417: Random decision forest implementation fails in Hadoop 2 (srowen)
